--- a/src/style.css
+++ b/src/style.css
@@ -6,10 +6,18 @@ body {
     text-rendering: optimizeLegibility;
 }
 
+.picture-wall {
+    display: flex;
+    padding: 0 30px;
+    padding-top: 15px;
+    box-sizing: border-box;
+    position: relative;
+}
+
 .masonry-layout {
+    width: 100%;
     position: relative;
     counter-reset: item-count;
-    /* contain: content; */
 }
 
 .item {
@@ -17,7 +25,6 @@ body {
     display: block;
     border-radius: 8px;
     background-color: #fff;
-    will-change: transform;
     counter-increment: item-count;
 }
 
@@ -59,4 +66,28 @@ ul {
     margin: 0;
     padding: 0;
     list-style-type: none;
+}
+
+.zoom-img-bg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 1;
+    visibility: hidden
+}
+.zoom-img-bg > img {
+    max-width: 50%;
+    max-height: 10%;
+    height: auto;
+    user-select: none;
+    cursor: grab;
+    /* will-change: transform; */
+}
+.zoom-img-bg > img:active {
+    cursor: grabbing;
 }
